--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
   <div id=="container"></div>
 
-  <script type='text/javascript' src="init.js"></script> // window on dom content loaded > container = get element by id, app = new App(container) > app.buildSplash()
-  <script type='text/javascript' src="app.js"></script> // function App(container), buildSplash(), buildModes(), buildRoulette(), buildResult()
-</body>
+  <script type='text/javascript' src="init.js"></script>
+  <script type='text/javascript' src="app.js"></script>
 
 </html>
