--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <title>Document</title>
+  <title>Roda</title>
 </head>
 
+
 <body>
+  <div class="container">
+    <header id='header'>
+    </header>
 
-  <div id=="container"></div>
+    <main id="main">
 
-  <script type='text/javascript' src="init.js"></script>
+    </main>
+    <footer id='footer'>
+    </footer>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script type='text/javascript' src="app.js"></script>
+  <script type='text/javascript' src="init.js"></script>
+  <script type='text/javascript' src="function.js"></script>
+
 
 </html>
