--- a/index-old.html
+++ b/index-old.html
@@ -17,7 +17,7 @@
   <script type='text/javascript' src="function.js"></script>
 
 
-  <img id="wheel" class='image' src="./images/roda-wheel.png" alt=" ">
+  <img id="wheel" class='roulette-image' src="./images/roda-wheel.png" alt=" ">
   <img class='icon' src="./images/foodicon.png " alt=" ">
   <img class='icon' src="./images/pointer.png " alt=" ">
 
