--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div class="container">
     <header id='header'>
+      <img id="logo" class='logo' src="./images/roda-logo-new.png" alt=" ">
     </header>
 
     <main id="main">
