--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 <body>
   <div class="container">
     <header id='header'>
+      <a href="index.html">
       <img id="logo" class='logo' src="./images/roda-logo-new.png" alt=" ">
+    </a>
     </header>
 
     <main id="main">
 
     </main>
     <footer id='footer'>
+      <p>Crafted randomly with <i class="fa fa-heart" aria-hidden="true" style="color:#be1931"></i> by Constantinos Yenis</p>
     </footer>
   </div>
 
@@ -27,6 +30,9 @@
   <script type='text/javascript' src="app.js"></script>
   <script type='text/javascript' src="init.js"></script>
   <script type='text/javascript' src="function.js"></script>
+  <script src="https://use.fontawesome.com/48ce11ca1a.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
+
 
 
 </html>
