--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <main id="main">
 
     </main>
+
+    <footer id='footer'>
+      <p>Crafted <i class="fa fa-random" aria-hidden="true"></i> with <i class="fa fa-heart" aria-hidden="true" style="color:#be1931"></i> by Constantinos Yenis <br>Special thanks: Dominik, Juan, Byron, Andre</p>
+
+    </footer>
   </div>
-  <footer id='footer'>
-    <p>Crafted randomly with <i class="fa fa-heart" aria-hidden="true" style="color:#be1931"></i> by Constantinos Yenis</p>
-  </footer>
 
 
 
